--- a/application/signup/templates/application_history.html
+++ b/application/signup/templates/application_history.html
@@ -22,48 +22,39 @@
     </div>
     <div class="column-three-quarter">
       <h1 class="heading-large">Application</h1>
-      <h2 class="heading-medium">Personal details</h2>
+      <h2 class="heading-medium">Employment history</h2>
 
       <section>
         <ul>
-          <li class="grid-row data-item__wrap">
-            <div class="data-item">
-              <div class="column-quarter data-item__type">Full name</div>
-              <div class="column-half data-item__entry">Colm Britton</div>
-              <div class="column-quarter"><button class="data-item__edit">edit</button></div>
-            </div>
+          <li class="job-history__item">
+            <h3 class="heading-medium job-history__role">Front-end designer</h3>
+            <h4 class="job-history__company">Karmarama</h4>
+            <p class="job-history__date">Mar 2012 &mdash; present</p>
+            <a href="" class="foot-link">see details</a>
           </li>
 
-          <li class="grid-row data-item__wrap">
-            <div class="data-item">
-              <div class="column-quarter data-item__type">Personal email</div>
-              <div class="column-half data-item__entry">colmjude@gmail.com</div>
-              <div class="column-quarter"><button class="data-item__edit">edit</button></div>
-            </div>
+          <li class="job-history__item">
+            <h3 class="heading-medium job-history__role">Product Manager</h3>
+            <h4 class="job-history__company">Kainos</h4>
+            <p class="job-history__date">Mar 2011 &mdash; Mar 2012</p>
+            <a href="" class="foot-link">see details</a>
           </li>
 
-          <li class="grid-row data-item__wrap">
-            <div class="data-item">
-              <div class="column-quarter data-item__type">Address</div>
-              <div class="column-half data-item__entry">
-              4 Greener House<br />
-              Garrick Road<br />
-              London<br />
-              SW6 6HG
-              </div>
-              <div class="column-quarter"><button class="data-item__edit">edit</button></div>
-            </div>
+          <li class="job-history__item">
+            <h3 class="heading-medium job-history__role">Senior software engineer</h3>
+            <h4 class="job-history__company">Virgin media</h4>
+            <p class="job-history__date">Jun 2009 &mdash; Mar 2011</p>
+            <a href="" class="foot-link">see details</a>
           </li>
 
-          <li class="grid-row data-item__wrap">
-            <div class="data-item">
-              <div class="column-quarter data-item__type">Contact number</div>
-              <div class="column-half data-item__entry">07659503485</div>
-              <div class="column-quarter"><button class="data-item__edit">edit</button></div>
-            </div>
+          <li class="job-history__item">
+            <h3 class="heading-medium job-history__role">Software engineer</h3>
+            <h4 class="job-history__company">Microsoft</h4>
+            <p class="job-history__date">Feb 2006 &mdash; Jun 2009</p>
+            <a href="" class="foot-link">see details</a>
           </li>
-
         </ul>
+        <div class="from-linkedin"><span>provided by </span><img class="linkedin-image" src="/static/images/linkedinx14.png" alt="" /></div>
       </section>
     </div>
   </div>
