make header group for application stages

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -25,6 +25,7 @@
 @import 'components/next-meeting';
 @import 'components/progresslist';
 @import 'components/data-item';
+@import 'components/header-group';
 
 // global for all profile based pages
 #global-header-bar {
