--- a/application/signup/templates/application.html
+++ b/application/signup/templates/application.html
@@ -21,8 +21,10 @@
       </section>
     </div>
     <div class="column-three-quarter">
-      <h1 class="heading-large">Application</h1>
-      <h2 class="heading-medium">Personal details</h2>
+      <header class="header-group">
+        <h1 class="sub-heading">Application</h1>
+        <h2 class="heading-large post-sub-heading">Personal details</h2>
+      </header>
 
       <section>
         <ul>
