--- a/application/signup/templates/partials/application_menu.html
+++ b/application/signup/templates/partials/application_menu.html
@@ -4,4 +4,5 @@
   <li class="side-menu__item checklist__status checklist__status--done"><a href="/signup/application/employment-history">Employment history</a></li>
   <li class="side-menu__item checklist__status checklist__status--incomplete"><a href="/signup/csprofile_jobs/alerts">Competencies</a></li>
   <li class="side-menu__item checklist__status checklist__status--inprogress"><a href="/signup/csprofile_jobs/alerts">Equality & diversity</a></li>
+  <li class="side-menu__item"><button class="button">submit application</button></li>
 </ul>
