--- a/application/signup/templates/application_competencies.html
+++ b/application/signup/templates/application_competencies.html
@@ -26,7 +26,7 @@
         <h2 class="heading-large post-sub-heading">Competencies</h2>
       </header>
 
-      <section>
+      <section class="app__section">
         <ul class="list-number app_section">
           <li class="app__competency">
             <label class="form-label" for="restrictions-text">Changing and improving</label>
@@ -42,6 +42,7 @@
           </li>
         </ul>
       </section>
+      <a href="/signup/application/equality" class="button btn--right">next step</a>
     </div>
   </div>
 
