--- a/application/signup/templates/application_history.html
+++ b/application/signup/templates/application_history.html
@@ -26,7 +26,7 @@
         <h2 class="heading-large post-sub-heading">Employment history</h2>
       </header>
 
-      <section>
+      <section class="app__section">
         <ul>
           <li class="job-history__item">
             <h3 class="heading-medium job-history__role">Front-end designer</h3>
@@ -58,6 +58,7 @@
         </ul>
         <div class="from-linkedin"><span>provided by </span><img class="linkedin-image" src="/static/images/linkedinx14.png" alt="" /></div>
       </section>
+      <a href="/signup/application/competencies" class="button btn--right">next step</a>
     </div>
   </div>
 
