--- a/application/signup/static/css/components/_objectives.scss
+++ b/application/signup/static/css/components/_objectives.scss
@@ -2,9 +2,15 @@
 .objective {
   border: 1px solid $panel-colour;
   margin-bottom: $gutter-half;
+  position: relative;
 
   .heading-small {
     margin-top: 0;
+  }
+
+  &:hover .objective__edit-btn {
+    opacity: 1;
+    transition: opacity 0.4s ease-in;
   }
 }
 .objective__heading {
@@ -24,4 +30,14 @@
 }
 .objective__progress {
   padding: $gutter-half;
+}
+.objective__edit-btn {
+  position: absolute;
+  right: 5px;
+  top: 10px;
+  opacity: 0;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
