--- a/application/signup/templates/csprofile_perf_obj.html
+++ b/application/signup/templates/csprofile_perf_obj.html
@@ -18,6 +18,7 @@
       <ul class="objectives">
         <li class="objective">
           <h3 class="heading-medium objective__heading">Objective 1</h3>
+          <button class="btn--edit objective__edit-btn">edit</button>
           <div class="grid-row objective__body">
             <div class="column-half objective__part">
               <h3 class="heading-small">What:</h3>
@@ -34,6 +35,7 @@
         </li>
         <li class="objective">
           <h3 class="heading-medium objective__heading">Objective 2</h3>
+          <button class="btn--edit objective__edit-btn">edit</button>
           <div class="grid-row objective__body">
             <div class="column-half objective__part">
               <h3 class="heading-small">What:</h3>
@@ -55,6 +57,7 @@
         </li>
         <li class="objective">
           <h3 class="heading-medium objective__heading">Objective 3</h3>
+          <button class="btn--edit objective__edit-btn">edit</button>
           <div class="grid-row objective__body">
             <div class="column-half objective__part">
               <h3 class="heading-small">What:</h3>
