add settings to application process

--- a/application/signup/templates/application_competencies.html
+++ b/application/signup/templates/application_competencies.html
@@ -21,6 +21,7 @@
       </section>
     </div>
     <div class="column-three-quarter">
+      {% include "partials/application_settings.html" ignore missing %}
       <header class="header-group">
         <h1 class="sub-heading">Application</h1>
         <h2 class="heading-large post-sub-heading">Competencies</h2>
