--- a/application/signup/templates/partials/your_apps_list.html
+++ b/application/signup/templates/partials/your_apps_list.html
@@ -2,12 +2,12 @@
 
   <details class="filter">
     <summary>Filter your applications</summary>
-    <button data-status="saved" class="button button--saved">Saved (2)</button>
-    <button data-status="incomplete" class="button button--incomplete">Incomplete (1)</button>
-    <button data-status="received" class="button button--received">Received (1)</button>
-    <button data-status="inprogress" class="button button--in-progress">In progress (1)</button>
-    <button data-status="offer" class="button button--offer">Offers (1)</button>
-    <button data-status="rejected" class="button button--rejected">Rejected (1)</button>
+    <button data-status="saved" class="filter-btn button--saved">Saved (2)</button>
+    <button data-status="incomplete" class="filter-btn button--incomplete">Incomplete (1)</button>
+    <button data-status="received" class="filter-btn button--received">Received (1)</button>
+    <button data-status="inprogress" class="filter-btn button--in-progress">In progress (1)</button>
+    <button data-status="offer" class="filter-btn button--offer">Offers (1)</button>
+    <button data-status="rejected" class="filter-btn button--rejected">Rejected (1)</button>
   </details>
 
   <ul class="apps__list">
