change to accept offer

--- a/application/signup/templates/partials/your_apps_list.html
+++ b/application/signup/templates/partials/your_apps_list.html
@@ -188,7 +188,7 @@
       <div class="app__wrapper">
         <div class="app__status app__status--offer">
           <p>offer given</p>
-          <a href="/jobs/contract" class="app__status__button">view contract</a>
+          <a href="/signup/basicprofile/checklist" class="app__status__button">accept offer</a>
         </div>
         <div class="app__info jd__listing">
           <div class="jd__reference">
