--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -57,7 +57,7 @@
       </section>
 
       <section class="section">
-        <h3 class="heading-medium">Your Skills</h3>
+        {% include "partials/skills_component.html" ignore missing %}
       </section>
 
     </div>
