--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -17,9 +17,11 @@
     </div>
     <div class="column-two-thirds">
       {% include "partials/people_finder.html" ignore missing %}
-      {% include "partials/add_expenses_widget.html" ignore missing %}
-      {# include "partials/add_services.html" ignore missing #}
+      {% include "partials/add_services.html" ignore missing %}
       {% include "partials/todo_list.html" ignore missing %}
+      <section>
+        {% include "partials/skills_component.html" ignore missing %}
+      </section>
     <div>
   </div>
 </main>
