--- a/application/signup/templates/partials/job-search-items.html
+++ b/application/signup/templates/partials/job-search-items.html
@@ -1,5 +1,5 @@
 <ul class="job-search-items">
-  <li class="job-search-item cv-active">
+  <li class="job-search-item">
     <div class="no-cv-content">
       <label for="cv-upload" class="form-label">Upload CV</label>
       <input type="file" class="cv-upoad" id="cv-upload" />
