update active menu item colour

--- a/application/signup/static/css/components/_profile_nav.scss
+++ b/application/signup/static/css/components/_profile_nav.scss
@@ -24,7 +24,7 @@
 }
 
 .profile__nav__item--active {
-  background: $link-colour;
+  background: $link-hover-colour;
   border-bottom: 3px solid $link-colour;
   color: $page-colour;
   font-weight: bold;
