add basic team component

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -27,6 +27,7 @@
 @import 'components/data-item';
 @import 'components/header-group';
 @import 'components/table';
+@import 'components/people';
 
 // global for all profile based pages
 #global-header-bar {
