--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -31,6 +31,11 @@
         {% include "partials/profile/equip_component.html" ignore missing %}
       </section>
     </div>
+    <div class="column-two-thirds">
+      <section>
+        {% include "partials/profile/team_component.html" ignore missing %}
+      </section>
+    </div>
   </div>
 </main>
 
