--- a/application/signup/templates/basicprofile_jobs_alerts.html
+++ b/application/signup/templates/basicprofile_jobs_alerts.html
@@ -5,10 +5,7 @@
 
 <main id="content" role="main">
   <section class="column-quarter">
-    <section>
-      <h5 class="heading-small">Colm Britton</h5>
-      <span>0 applications</span>
-    </section>
+    {% include "partials/basicprofile_jobs_profile.html" ignore missing %}
     <section class="section">
       {% include "partials/basic_jobs_menu.html" ignore missing %}
     </section>
