--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -9,6 +9,12 @@
   <p>This page lists some of the main prototypes we have been working on</p>
 
   <h2 class="heading-large">Prototypes</h2>
+  <ul>
+    <li>
+      <a href="/signup/prototype_login">Prototype login</a>
+    </li>
+  </ul>
+
 
   <h3 class="heading-medium">Profile</h3>
   <ul>
