add success banner to application pages

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -28,6 +28,7 @@
 @import 'components/header-group';
 @import 'components/table';
 @import 'components/people';
+@import 'components/app_submitted';
 
 // global for all profile based pages
 #global-header-bar {
