--- a/application/signup/templates/application.html
+++ b/application/signup/templates/application.html
@@ -11,6 +11,9 @@
 {% endblock %}
 
 {% block content %}
+
+{% include "partials/app_success_banner.html" ignore missing %}
+
 <main id="content" role="main">
 
   <div class="grid-row">
