--- a/application/signup/templates/partials/application_settings.html
+++ b/application/signup/templates/partials/application_settings.html
@@ -6,6 +6,9 @@
       <input type="checkbox" name="box1" value="email" id="email_check"> <label for="email_check">email</label> <br>
       <input type="checkbox" name="box1" value="sms" id="sms_check"> <label for="sms_check">SMS</label>
     </fieldset>
-    <button class="btn--edit btn--edit--dark settings__save">save</button>
+    <div class="settings__save__wrap">
+      <button class="btn--edit btn--edit--dark settings__save">save</button>
+      <span class="settings-msg__success">Saved!</span>
+    </div>
   </form>
 </div>
