--- a/application/signup/static/css/components/_add_widget.scss
+++ b/application/signup/static/css/components/_add_widget.scss
@@ -1,3 +1,35 @@
+.component__head {
+  
+}
+.component__heading {
+  display: inline;
+}
+.component-expand-btn {
+  @include circle($gutter);
+  background: $link-colour;
+  color: $page-colour;
+  border: none;
+  font-size: 24px;
+  line-height: $gutter;
+  margin-left: $gutter-half;
+
+  &:hover {
+    cursor: pointer;
+    background: $link-hover-colour;
+  }
+}
+
+.services-list {
+  
+}
+.services-list--closed {
+  display: none;
+}
+.services-list__item {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
 .add_widget {
   border: 1px dashed $secondary-text-colour;
   padding: $gutter;
