--- a/application/signup/templates/partials/expenses_widget.html
+++ b/application/signup/templates/partials/expenses_widget.html
@@ -11,11 +11,12 @@
     </div>
     <div class="grid-row">
       <div class="column-two-thirds">Total owed</div>
-      <div class="column-third info__item">£329</div>
+      <div class="column-third info__item">£397</div>
     </div>
     <div class="grid-row">
       <div class="column-two-thirds">Payment due</div>
       <div class="column-third info__item">2nd Jun</div>
     </div>
+    <a href="/being_a_civil_servant/addreceipt" class="foot-link">view details</a>
   </div>
 </div>
