use granted services data in services tab

--- a/application/signup/templates/csprofile_services.html
+++ b/application/signup/templates/csprofile_services.html
@@ -14,6 +14,10 @@
         {{ build_service_item(service) }}
       {% endfor %}
 
+      {% for service in user_services %}
+        {{ build_service_item(service.data) }}
+      {% endfor %}
+
     </ul>
   </section>
 </main>
