--- a/application/signup/templates/partials/service.html
+++ b/application/signup/templates/partials/service.html
@@ -2,7 +2,7 @@
 
 <li class="grid-row service__item">
   <div class="column-three-quarter">
-    <h3 class="heading-small">{{ service.name }}</h3>
+    <h3 class="heading-small">{{ service.id }}</h3>
     <p class="text">{{ service.desc }}</p>
     <p class="secondary service__item__meta">
       <span>Permissions: {{ service.permissions }}</span>
