--- a/application/signup/templates/partials/job-search-items.html
+++ b/application/signup/templates/partials/job-search-items.html
@@ -11,12 +11,13 @@
       </div>
     <div>
   </li>
-  <li class="job-search-item linkedin--associated">
+  <li class="job-search-item linkedin--associated-not" data-item-type="linkedin">
     <div class="grid-row">
       <div class="column-quarter"><img src="/static/images/linkedin.png" alt="" class="linkedin--logo" /></div>
       <div class="column-three-quarter">
         <a href="" class="linkedin--associated--link job-search-item__link">view profile</a>
-        <span class="linkedin--not-associated--link job-search-item__link">not yet associated</a>
+        <span class="linkedin--associating__loader"><img src="/static/images/linkedin-loader.gif" alt="" />connecting </span>
+        <span class="linkedin--not-associated--link job-search-item__link">&mdash; not yet associated &mdash;</a>
       </div>
     </div>
   </li>
