--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -20,7 +20,7 @@
           </div>
           <div class="column-third">
             <div class="welcome__action__wrap cv-upload-btn"><a href="">upload cv</a></div>
-            <div class="welcome__action__wrap"><a href="">add linkedin</a></div>
+            <div class="welcome__action__wrap linkedin-upload-btn"><a href="">add linkedin</a></div>
           </div>
           <div class="column-third">
             <div class="welcome__action__wrap">
