--- a/application/signup/templates/partials/basic_jobs_menu.html
+++ b/application/signup/templates/partials/basic_jobs_menu.html
@@ -1,5 +1,5 @@
 <ul class="side-menu">
   <li class="side-menu__item {% if activeMenu == 'home' %}side-menu__item--active{% endif %}"><a href="/signup/basicprofile_jobs">Search</a></li>
-  <li class="side-menu__item {% if activeMenu == 'apps' %}side-menu__item--active{% endif %}"><a href="/signup/basicprofile_jobs/apps">Your apps</a></li>
+  <li class="side-menu__item {% if activeMenu == 'apps' %}side-menu__item--active{% endif %}"><a href="/signup/basicprofile_jobs/apps">Your applications</a></li>
   <li class="side-menu__item {% if activeMenu == 'alerts' %}side-menu__item--active{% endif %}"><a href="/signup/basicprofile_jobs/alerts">Alerts</a></li>
 </ul>
