--- a/application/signup/templates/application.html
+++ b/application/signup/templates/application.html
@@ -35,7 +35,7 @@
           <li class="grid-row data-item__wrap">
             <div class="data-item">
               <div class="column-quarter data-item__type">Full name</div>
-              <div class="column-half data-item__entry">Colm Britton</div>
+              <div class="column-half data-item__entry" data-key="name">Colm Britton</div>
               <div class="column-quarter"><button class="data-item__edit">edit</button></div>
             </div>
           </li>
