update couple of partials

--- a/application/signup/templates/partials/nav.html
+++ b/application/signup/templates/partials/nav.html
@@ -4,7 +4,7 @@
     <li class="profile__nav__item {% if activeTab == 'you' %}profile__nav__item--active{% endif %}"><a href="/signup/csprofile">You</a></li>
     <li class="profile__nav__item {% if activeTab == 'jobs' %}profile__nav__item--active{% endif %}"><a href="/signup/csprofile_jobs">Jobs</a></li>
     <li class="profile__nav__item {% if activeTab == 'learning' %}profile__nav__item--active{% endif %}"><a href="/signup/csprofile_learning">Learning</a></li>
-    <li class="profile__nav__item {% if activeTab == 'performance' %}profile__nav__item--active{% endif %}"><a href="/signup/csprofile_perf">Performance</a></li>
+    <li class="profile__nav__item {% if activeTab == 'performance' %}profile__nav__item--active{% endif %}"><a href="/signup/csprofile_perf/objectives">Performance</a></li>
     <li class="profile__nav__item {% if activeTab == 'services' %}profile__nav__item--active{% endif %}"><a href="/signup/csprofile_services">Services</a></li>
   </ul>
 </nav>
