--- a/application/signup/templates/partials/profile/key-info.html
+++ b/application/signup/templates/partials/profile/key-info.html
@@ -2,23 +2,19 @@
   <table>
     <tbody>
       <tr>
-        <td>Role:</td>
+        <td class="key-info__type">Role:</td>
         <td>Front-end designer</td>
       </tr>
       <tr>
-        <td>Team:</td>
+        <td class="key-info__type">Team:</td>
         <td>Cross government tools</td>
       </tr>
       <tr>
-        <td>Division:</td>
+        <td class="key-info__type">Area:</td>
         <td>Government Digital Service (GDS)</td>
       </tr>
       <tr>
-        <td>Department:</td>
-        <td>Cabinet Office</td>
-      </tr>
-      <tr>
-        <td>Location:</td>
+        <td class="key-info__type">Location:</td>
         <td>Aviation House, Holborn, London</td>
       </tr>
     </tbody>
