--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -11,6 +11,7 @@
       </section>
       {% include "partials/profile/key-info.html" ignore missing %}
       {% include "partials/profile/team_component.html" ignore missing %}
+      {% include "partials/profile/communities.html" ignore missing %}
     </div><!-- end column-third -->
     <div class="column-two-thirds">
       {% include "partials/people_finder.html" ignore missing %}
