better layout left column of profile

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -29,6 +29,7 @@
 @import 'components/table';
 @import 'components/people';
 @import 'components/app_submitted';
+@import 'components/component';
 
 // global for all profile based pages
 #global-header-bar {
