--- a/application/signup/templates/partials/profile/communities.html
+++ b/application/signup/templates/partials/profile/communities.html
@@ -1,4 +1,4 @@
-<h4 class="heading-medium">Communities</h4>
+<h4 class="heading-medium component__head">Communities</h4>
 <ul class="communities-list">
   <li><span class="community-type">P:</span>Digital</li>
   <li><span class="community-type">F:</span>Technology</li>
