--- a/application/signup/templates/partials/profile/team_component.html
+++ b/application/signup/templates/partials/profile/team_component.html
@@ -1,4 +1,4 @@
-<h4 class="heading-medium">Team</h4>
+<h4 class="heading-medium component__head">Team</h4>
 <h5 class="heading-small">Line manager</h5>
 <ul>
   <li><img src="http://placehold.it/50x50" class=""></li>
